plugins/groovy/testdata/highlighting/ModifiersInPackageAndImportStatements.groovy
/*
 * Copyright 2000-2011 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@Deprecated <error descr="Package definiton cannot have modifiers">private</error> <error descr="Package definiton cannot have modifiers">final</error> package x;

<warning descr="Unused import">@Deprecated <error descr="Import statement cannot have modifiers">final</error> import java.lang.Object</warning>;